# CameraLidar

./: .gitignore  JETSON_SETUP_COMPLETE.md  LICENSE  PROXIMITY_VISUALIZATION_README.md  README.md  STARTUP_GUIDE.md  build_workspace.sh  fix_catkin_tools.sh  pointcloud_to_laserscan.cpp  scan_to_rangefinder.cpp  setup_jetson.sh  setup_jetson_fixed.sh  setup_jetson_minimal.sh  test_jetson.sh  test_obstacle_publisher.cpp
catkin_ws/devel/: .catkin  _setup_util.py  setup.sh
catkin_ws/src/camera_lidar_fusion/: CMakeLists.txt  MAVROS_INTEGRATION_SUMMARY.md  README_ENHANCED_SYSTEM.md  README_FINAL.md  README_MAVROS_INTEGRATION.md  package.xml
catkin_ws/src/camera_lidar_fusion/config/: calibration.rviz  camera_lidar_fusion.rviz  enhanced_fusion_jetson.rviz  jetson_nano_params.yaml  mavros_integration.rviz  simple_fusion.rviz
catkin_ws/src/camera_lidar_fusion/launch/: calibration.launch  camera_lidar_fusion.launch  camera_lidar_fusion_simple.launch  complete_fusion_system.launch  complete_system.launch  complete_system_final.launch  enhanced_system_full.launch  enhanced_system_jetson.launch  enhanced_system_working.launch  mavros_integration.launch  simple_enhanced_jetson.launch  test_mavros.launch  zed_camera.launch
catkin_ws/src/camera_lidar_fusion/scripts/: basic_object_detection_node.py  calibrated_fusion_node.py  calibration_node.py  calibration_tool.py  camera_lidar_fusion_node.py  camera_lidar_fusion_simple.py  camera_lidar_mavros_node.py  camera_test_node.py  distance_monitor_node.py  enhanced_calibration_node.py  enhanced_filtering_manual.py  enhanced_filtering_node.py  enhanced_filtering_simple.py  image_bridge_node.py  lidar_camera_fusion_node.py  lidar_distance_test.py  lidar_only_node.py  mavros_obstacle_node.py  minimal_test_node.py  object_detection_node.py  object_detection_tracking_node.py  pcl_helper.py  performance_monitor_node.py  rangefinder_test.py  simple_object_detection_node.py  simple_obstacle_test.py  simple_test_node.py  start_enhanced_system_full.sh  start_enhanced_system_jetson.sh  start_simple_enhanced.sh  start_system.sh  test_display.py  test_enhanced_system.py  test_lidar_publisher.py  test_mavros_integration.py  tf_publisher.py  velocity_controller_node.py  web_monitor.py  working_obstacle_node.py  zed_camera_node.py
catkin_ws/src/camera_lidar_fusion/src/: camera_lidar_fusion_node.cpp
catkin_ws/src/filters_launch/launch/: l1_filters.launch
catkin_ws/src/mavprox_bridge/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/mavprox_bridge/config/: mavros_distance_config.yaml
catkin_ws/src/mavprox_bridge/launch/: bridge_distance_sensor.launch  bridge_distance_sensor_final.launch  bridge_fixed.launch
catkin_ws/src/mavprox_bridge/src/: pointcloud_to_laserscan_simple.cpp  scan_to_obstacle.cpp  scan_to_obstacle_fixed.cpp  scan_to_rangefinder.cpp
catkin_ws/src/unitree_lidar_ros/src/unitree_lidar_ros/rviz/: view.rviz
configs/: bridge.launch  bridge_distance_sensor_final.launch  bridge_distance_sensor_fixed.launch  bridge_rangefinder.launch
docs/: PROXIMITY_README.md  QUICK_START.md
scripts/: install_ros_jetson.sh  install_ros_melodic_jetson.sh  prox_test.py  prox_test_obstacle.py  run_prox_demo.sh  run_rviz_local.sh  setup_jetson.sh  start_system_complete.sh
viz/: l1_tf_publisher.py  visualize_proximity.py
~/.ssh/: config
